zerocopy-derive/tests/ui-msrv/late_compile_pass.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:27:10
   |
27 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:36:10
   |
36 | #[derive(FromZeros)]
   |          ^^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:36:10
   |
36 | #[derive(FromZeros)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:56:10
   |
56 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: zerocopy::Unaligned` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:66:10
   |
66 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: zerocopy::Unaligned` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:74:10
   |
74 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: zerocopy::Unaligned` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/late_compile_pass.rs:81:10
   |
81 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0277`.
